defualy bg gradieny image change + button box shadow updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         section{
             height: 100vh;
             width: 100%;
-            background-image: linear-gradient(45deg,rgb(186, 183, 33),rgb(41, 201, 174));
+            background-image:linear-gradient(45deg,#636ee8,#e10c20);
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -35,7 +35,7 @@
             padding: 1rem 2rem;
             border-radius: 2.5rem;
             border: none;
-            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
             font-family: sans-serif;
             font-weight: 500;
         }
@@ -79,12 +79,12 @@
 <body>
     <section>
         <div class="button">
-            <button class="btn" id="btn1">#bab721</button>
-            <button class="btn" id="btn2">#29c9ae</button>
+            <button class="btn" id="btn1">#636ee8</button>
+            <button class="btn" id="btn2">#e10c20</button>
         </div>
         <h2>Copy Your Code From Here</h2>
         <div class="copycode">
-            background-image: linear-gradient(45deg,rgb(186, 183, 33),rgb(41, 201, 174));
+            background-image:linear-gradient(45deg,#636ee8,#e10c20);
         </div>
     </section>
     <script>
